# hashcode-train-1

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp  test.h  test_answer.out
